@@ -1,15 +1,19 @@
 package fr.perso.springserie.model.entity;
 
+import com.fasterxml.jackson.databind.jsonFormatVisitors.JsonArrayFormatVisitor;
 import jakarta.persistence.Column;
 import jakarta.persistence.Entity;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
+import org.apache.tomcat.util.json.JSONParser;
+import org.apache.tomcat.util.json.ParseException;
+import org.json.JSONArray;
+import org.springframework.boot.autoconfigure.gson.GsonAutoConfiguration;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Entity
 @Getter
@@ -23,7 +27,11 @@ public class User extends BaseEntity {
     private String password;
 
     public List<String> getRoles() {
-        return Arrays.stream(roles.split(",")).map(e->e.replace("[", "")
-                .replace("\"", "").replace("]","")).collect(Collectors.toList());
+        return Arrays.stream(roles.split(",")).map(e -> e.replace("[", "")
+                .replace("\"", "").replace("]", "")).toList();
+    }
+
+    public void setRoles(List<String> roles) {
+        this.roles=new JSONArray(roles).toString();
     }
 }
